--- a/style.css
+++ b/style.css
@@ -1,1 +1,123 @@
+@font-face {
+    font-family: Rubik-1;
+    src: url("assets/fonts/Rubik-VariableFont_wght.ttf");
+    font-weight: 400;
+}
 
+@font-face {
+    font-family: Rubik-2;
+    src: url("assets/fonts/Rubik-VariableFont_wght.ttf");
+    font-weight: 700;
+}
+
+body {
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-width: 400px;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    font-family: "Rubik-2";
+    font-size: 16px;
+    line-height: 1.5;
+    color: #110707;
+}
+
+ul {
+    font-family: "Rubik-1";
+}
+
+html {
+    scroll-behavior: smooth; 
+  }
+
+* {
+    box-sizing: border-box;
+}
+
+.header {
+    min-height: 50px;
+    display: block;
+    background-color: brown;
+}
+
+
+.nav-head {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    list-style: none;
+}
+
+.h-container {
+    max-width: 1440px;
+    margin: 0 auto;
+    display: flex; 
+    flex-direction: column;
+  }
+.nav-item {
+    margin-block-start: 1.5em;
+    margin-block-end: 1.5em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 50px;
+    color: #000000;
+    text-decoration: none;  
+    transition: color 0.5s;
+    
+}
+
+.nav-item a:hover {
+    color: #ffffff;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+@media (max-width: 768px) {
+    .section {
+      width: 100%;
+    }
+  }
+
+.main-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+main {
+    display:block;
+}
+.section {
+    display: flex;
+    padding: 10px;
+    padding-bottom: 40px;
+    border-bottom: 1px solid #000000;
+    width: 100%;
+    background-color: rgba(184, 60, 60, 0.432);
+  }
+
+.section-title {
+    font-size: 20px;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    color: #010301;
+  }
+
+.footer {
+    min-height: 50px;
+    display: block;
+    background-color: brown;
+}
+.img-f {
+    max-width: 10%;
+}
+.img-h {
+    max-width: 30%;
+}
+code {
+    background-color: gray;
+}
